[gd_scene load_steps=6 format=2]

[ext_resource path="res://BlockSprites/MenuButton.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://BlockSprites/PlayButton.png" type="Texture" id=3]
[ext_resource path="res://BlockSprites/QuitButton.png" type="Texture" id=4]
[ext_resource path="res://BlockSprites/LevelsButton.png" type="Texture" id=5]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Play" type="Button" parent="."]
visible = false
margin_left = 432.0
margin_top = 144.0
margin_right = 590.0
margin_bottom = 212.0
icon = ExtResource( 3 )
expand_icon = true

[node name="Menu" type="Button" parent="."]
visible = false
margin_left = 433.0
margin_top = 226.0
margin_right = 591.0
margin_bottom = 294.0
icon = ExtResource( 1 )
expand_icon = true

[node name="Levels" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = 19.0
margin_right = 93.0
margin_bottom = 77.0
icon = ExtResource( 5 )
expand_icon = true

[node name="Quit" type="Button" parent="."]
visible = false
margin_left = 434.0
margin_top = 393.0
margin_right = 592.0
margin_bottom = 461.0
icon = ExtResource( 4 )
expand_icon = true

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Levels" to="." method="_on_Levels_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
